--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -3,6 +3,6 @@
         <li><a href="/"> Home </a></li>
          <li><a href="/acerca"> Acerca </a></li>
           <li><a href="/usuarios"> Usuarios </a></li>
-          <li><a href="/upload-form"> Cargar archivo </a></li>
+          <li><a href="/upload"> Cargar archivo </a></li>
     </ul>
 </nav>
