--- a/views/upload-form.hbs
+++ b/views/upload-form.hbs
@@ -3,7 +3,7 @@
         <p>{{ message }}</p>
 
     <div class="form">
-    <form action="/upload" method="POST" enctype="multipart/form-data">
+    <form action="/upload/upload" method="POST" enctype="multipart/form-data">
       <input type="file" name="file">
       <button type="submit">Subir Archivo</button>
     </form>
